Fixed some issues related to z-index and color.

--- a/web/pgadmin/static/scss/_alertify.overrides.scss
+++ b/web/pgadmin/static/scss/_alertify.overrides.scss
@@ -1,6 +1,5 @@
 /* Overrides alertify js headers */
 .alertify {
-  z-index: 3002;
   position: fixed;
 
   .ajs-header {
